--- a/Paint.csproj
+++ b/Paint.csproj
@@ -138,5 +138,11 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Rectangle.bmp" />
+    <Content Include="Curve.bmp" />
+    <Content Include="Ellipse.bmp" />
+    <Content Include="Line.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
